--- a/site/layouts/partials/logo.html
+++ b/site/layouts/partials/logo.html
@@ -1,3 +1,12 @@
 <a href="{{ .Site.BaseURL }}" style="text-decoration: none;">
-    <h1 style="margin: 0; padding: 1rem; color: var(--MENU-SECTIONS-ACTIVE-BG-color);">{{ .Site.Title }}</h1>
+    <h1 style="margin: 0; padding: 1rem; color: var(--MENU-SECTIONS-ACTIVE-BG-color);">
+        {{- .Site.Title -}}
+        {{- with site.Params.version -}}
+            {{- if eq . "dev" }}
+                <span style="font-size: 0.5em; vertical-align: middle; opacity: 0.7;">(dev)</span>
+            {{- else }}
+                <span style="font-size: 0.5em; vertical-align: middle; opacity: 0.7;">{{ . }}</span>
+            {{- end -}}
+        {{- end -}}
+    </h1>
 </a>
